<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.volcain.android.birdie.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/category_1"
            style="@style/LinearLayoutHorizontalStyle">

            <TextView
                android:id="@+id/albums"
                style="@style/CategoryStyle"
                android:tag="@string/category_albums"
                android:text="@string/category_albums" />

            <TextView
                android:id="@+id/artists"
                style="@style/CategoryStyle"
                android:tag="@string/category_artists"
                android:text="@string/category_artists" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_2"
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_below="@id/category_1">

            <TextView
                android:id="@+id/genre"
                style="@style/CategoryStyle"
                android:tag="@string/category_genre"
                android:text="@string/category_genre" />

            <TextView
                android:id="@+id/songs"
                style="@style/CategoryStyle"
                android:tag="@string/category_songs"
                android:text="@string/category_songs" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutVerticalStyle"
            android:layout_below="@id/category_2">

            <TextView
                android:id="@+id/add_songs"
                style="@style/CategoryStyle"
                android:text="@string/add_songs" />

            <TextView
                style="@style/TextDescriptionStyle"
                android:text="@string/activity_main_desc" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
