<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tags"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.volcain.android.birdie.GenreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/category_1"
            style="@style/LinearLayoutHorizontalStyle">

            <TextView
                android:id="@+id/genre_1"
                style="@style/CategoryStyle"
                android:tag="@string/genre_1"
                android:text="@string/genre_1" />

            <TextView
                android:id="@+id/genre_2"
                style="@style/CategoryStyle"
                android:tag="@string/genre_2"
                android:text="@string/genre_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_2"
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_below="@id/category_1">

            <TextView
                android:id="@+id/genre_3"
                style="@style/CategoryStyle"
                android:tag="@string/genre_3"
                android:text="@string/genre_3" />

            <TextView
                android:id="@+id/genre_4"
                style="@style/CategoryStyle"
                android:tag="@string/genre_4"
                android:text="@string/genre_4" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_below="@id/category_2">

            <TextView
                style="@style/TextDescriptionStyle"
                android:text="@string/activity_album_desc" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>

