<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.volcain.android.birdie.ArtistsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/category_1"
            style="@style/LinearLayoutHorizontalStyle">

            <TextView
                android:id="@+id/artist_1"
                style="@style/CategoryStyle"
                android:tag="@string/artist_1"
                android:text="@string/artist_1" />

            <TextView
                android:id="@+id/artist_2"
                style="@style/CategoryStyle"
                android:tag="@string/artist_2"
                android:text="@string/artist_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_2"
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_below="@id/category_1">

            <TextView
                android:id="@+id/artist_3"
                style="@style/CategoryStyle"
                android:tag="@string/artist_3"
                android:text="@string/artist_3" />

            <TextView
                android:id="@+id/artist_4"
                style="@style/CategoryStyle"
                android:tag="@string/artist_4"
                android:text="@string/artist_4" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutHorizontalStyle"
            android:layout_below="@id/category_2">

            <TextView
                style="@style/TextDescriptionStyle"
                android:text="@string/activity_artist_desc" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
